<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:contentDescription="@string/favorite"
        android:icon="@drawable/ic_favorite_fill"
        android:title="@string/favorite"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/searchUser"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/setting"
        android:contentDescription="@string/setting"
        android:title="@string/setting" />
</menu>